--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Global Solution</title>
 </head>
 <body>
+    <div id="preloader"></div>
+    <header id="principal">
+        <img src="" alt="" id="logo">
+        <nav class="navbar">
+            <ul class="navlinks">
+                <li class="navlist"></li>
+                <li class="navlist"></li>
+                <li class="navlist"></li>
+                <li class="navlist"></li>
+                <li class="navlist"></li>
+            </ul>
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
+
+    <!--<script>
+        // Script para remover o preloader após a página carregar
+        var preloader = document.getElementById('preloader');
+        window.addEventListener('load', function() {
+            preloader.style.display = 'none';
+        });
+    </script>-->
     
 </body>
 </html>
