Alterando preloader e adicionando pastas

--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Global Solution</title>
+    <title>Ocean Shield</title>
 </head>
+
 <body>
     <div id="preloader"></div>
+
     <header id="principal">
-        <img src="" alt="" id="logo">
+        <img src="src/assets/img/logo/#" alt="Logo Ocean Shield" id="logo">
         <nav class="navbar">
             <ul class="navlinks">
-                <li class="navlist"></li>
-                <li class="navlist"></li>
-                <li class="navlist"></li>
-                <li class="navlist"></li>
-                <li class="navlist"></li>
+                <li class="navlist"><a href="#home">Home</a></li>
+                <li class="navlist"><a href="#services">Serviços</a></li>
+                <li class="navlist"><a href="#about">Sobre Nós</a></li>
+                <li class="navlist"><a href="#contact">Contato</a></li>
+                <li class="navlist"><a href="#faq">FAQ</a></li>
             </ul>
         </nav>
     </header>
-    <main></main>
-    <footer></footer>
+
+    <main>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Global Solution. Todos os direitos reservados.</p>
+    </footer>
 
     <!--<script>
         // Script para remover o preloader após a página carregar
@@ -29,7 +37,7 @@
         window.addEventListener('load', function() {
             preloader.style.display = 'none';
         });
-    </script>-->
-    
+    </script>*/-->
 </body>
+
 </html>
