--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="src/assets/img/icone/favicon.jpeg" type="image/x-icon">
+    <link rel="stylesheet" href="src/css/style.css">
     <title>Ocean Shield</title>
 </head>
 
@@ -12,7 +13,7 @@
     <div id="preloader"></div>
 
     <header id="principal">
-        <img src="src/assets/img/logo/#" alt="Logo Ocean Shield" id="logo">
+        <img src="src/assets/img/logo/logo2.png" alt="Logo Ocean Shield" id="logo">
         <nav class="navbar">
             <ul class="navlinks">
                 <li class="navlist"><a href="#home">Home</a></li>
@@ -20,24 +21,25 @@
                 <li class="navlist"><a href="#about">Sobre Nós</a></li>
                 <li class="navlist"><a href="#contact">Contato</a></li>
                 <li class="navlist"><a href="#faq">FAQ</a></li>
+                <li class="navlist"><a href="#outro">Outro</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
+        <video src="src/assets/video/videohome.mp4" autoplay loop muted></video>
     </main>
-
     <footer>
         <p>&copy; 2024 Global Solution. Todos os direitos reservados.</p>
     </footer>
 
-    <!--<script>
+    <script>
         // Script para remover o preloader após a página carregar
         var preloader = document.getElementById('preloader');
         window.addEventListener('load', function() {
             preloader.style.display = 'none';
         });
-    </script>*/-->
+    </script>
 </body>
 
 </html>
