--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="src/assets/img/icone/favicon.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="src/assets/img/icone/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="src/css/style.css">
     <title>Ocean Shield</title>
 </head>
@@ -12,25 +12,36 @@
 <body>
     <div id="preloader"></div>
 
-    <header id="principal">
-        <img src="src/assets/img/logo/logo2.png" alt="Logo Ocean Shield" id="logo">
+    <header id="header">
+        <img src="src/assets/img/logo/logo.png" alt="Logo Ocean Shield" id="logo">
         <nav class="navbar">
-            <ul class="navlinks">
-                <li class="navlist"><a href="#home">Home</a></li>
-                <li class="navlist"><a href="#services">Serviços</a></li>
-                <li class="navlist"><a href="#about">Sobre Nós</a></li>
-                <li class="navlist"><a href="#contact">Contato</a></li>
-                <li class="navlist"><a href="#faq">FAQ</a></li>
-                <li class="navlist"><a href="#outro">Outro</a></li>
+            <div class="mobile-menu">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+            <ul class="nav-list">
+                <li class="navlink"><a href="#home">Home</a></li>
+                <li class="navlink"><a href="#services">Serviços</a></li>
+                <li class="navlink"><a href="#about">Sobre Nós</a></li>
+                <li class="navlink"><a href="#contact">Contato</a></li>
+                <li class="navlink"><a href="#faq">FAQ</a></li>
+                <li class="navlink"><a href="#outro">Outro</a></li>
             </ul>
         </nav>
     </header>
-
+    
     <main>
-        <video src="src/assets/video/videohome.mp4" autoplay loop muted></video>
+        <div class="video-container">
+            <video id="videohome" src="src/assets/video/home.mp4" autoplay loop muted></video>
+            <div class="text-overlay">
+                <h1 class="content_h1">Ocean Shield</h1>
+                <p class="content_text">Na Ocean Shield, unimos tecnologia, inovação e sustentabilidade para proteger nossos oceanos. Nosso objetivo é promover uma gestão sustentável e consciente dos recursos marinhos, alertando e informando comunidades costeiras e empresas sobre a importância da saúde dos oceanos. Junte-se a nós nesta missão pela preservação dos ecossistemas marinhos e pela garantia de um futuro sustentável para todos.</p>
+            </div>
+        </div>
     </main>
     <footer>
-        <p>&copy; 2024 Global Solution. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Ocean Shield. Todos os direitos reservados.</p>
     </footer>
 
     <script>
@@ -40,6 +51,7 @@
             preloader.style.display = 'none';
         });
     </script>
+    <script src="src/js/script.js"></script>
 </body>
 
 </html>
