--- a/index.html
+++ b/index.html
@@ -36,9 +36,73 @@
             <video id="videohome" src="src/assets/video/home.mp4" autoplay loop muted></video>
             <div class="text-overlay">
                 <h1 class="content_h1">Ocean Shield</h1>
-                <p class="content_text">Na Ocean Shield, unimos tecnologia, inovação e sustentabilidade para proteger nossos oceanos. Nosso objetivo é promover uma gestão sustentável e consciente dos recursos marinhos, alertando e informando comunidades costeiras e empresas sobre a importância da saúde dos oceanos.</p>
+                <p class="content_text">Na Ocean Shield, unimos tecnologia, inovação e sustentabilidade para proteger nossos oceanos.</p>
             </div>
         </div>
+        <section class="problem">
+            <div class="content_problem" id="section1">
+                <h1 class="h1_problem">Poluição dos Oceanos</h1>
+                <p class="text_problem">
+                    Os oceanos enfrentam uma crise ambiental severa devido a múltiplos fatores que comprometem a saúde dos ecossistemas marinhos e, consequentemente, a vida humana. Entre os principais problemas estão a acidificação, a bioacumulação de metais pesados, a eutrofização, vazamentos de petróleo, o acúmulo de plástico e o aquecimento global. Esses problemas têm causado danos irreparáveis ao meio ambiente, afetando tanto a biodiversidade marinha quanto as populações humanas que dependem dos oceanos para alimentação, emprego e atividades econômicas.</p>
+            </div>
+            <div class="img_problem"></div>
+        </section>
+        <section class="problem">
+            <div class="content_problem" id="section2">
+                <h1 class="h1_problem">Qual a tecnologia ajuda a diminuir esse problema?</h1>
+                <p class="text_problem">
+                    Nós da Ocean Shield desenvolvemos soluções para informar sobre a poluição marinha e ajudar a reduzir seus efeitos. Vamos usar sensores para medir o dióxido de carbono e a temperatura da água. Além disso, criaremos uma ferramenta para verificar se a água atende aos padrões globais. Em nosso site, você encontrará informações sobre a poluição oceânica, apresentadas com gráficos e tabelas.</p>
+            </div>
+            <div class="img_problem"></div>
+        </section>
+        <section class="problem">
+            <div class="content_problem" id="section3">
+                <h1 class="h1_problem">Quais os objetivos pretendemos alcançar?</h1>
+                <p class="text_problem">
+                    Os objetivos incluem a criação de métodos eficazes para capturar e visualizar dados sobre a saúde dos oceanos, promover a conscientização sobre a poluição marinha, informar sobre os impactos da acidificação e poluição nos ecossistemas marinhos, e fornecer informações que possam orientar ações para mitigar esses problemas.</p>
+            </div>
+            <div class="img_problem"></div>
+        </section>
+        <section class="problem">
+            <div class="content_problem" id="section4">
+                <h1 class="h1_problem">Quem buscamos ajudar?</h1>
+                <p class="text_problem">
+                    O público impactado inclui populações costeiras, pescadores, empresas que operam nos mares, indústrias poluentes, governos e organizações ambientais, além do público em geral que depende dos oceanos para subsistência e lazer.</p>
+            </div>
+            <div class="img_problem"></div>
+        </section>
+        <section class="problem">
+            <div class="content_problem" id="section5">
+                <h1 class="h1_problem">Quais os benefícios oferecidos pela solução?</h1>
+                <p class="text_problem">
+                    A solução oferece diversos benefícios, como:
+                    <ol>
+                        <li class="list_problem">Monitoramento contínuo da qualidade da água dos oceanos.</li>
+                        <li class="list_problem">Fornecimento de dados precisos para orientar políticas públicas e ações de mitigação.</li>
+                        <li class="list_problem">Aumento da conscientização sobre os impactos da poluição marinha.</li>
+                        <li class="list_problem">Apoio à sustentabilidade e conservação dos ecossistemas marinhos.</li>
+                        <li class="list_problem">Redução dos riscos para a saúde humana e para a economia local ligada aos recursos marinhos.</li>
+                    </ol>
+                </p>
+            </div>
+            <div class="img_problem"></div>
+        </section>
+        <section class="problem">
+            <div class="content_problem" id="section6">
+                <h1 class="h1_problem">Como essa solução poderão ajudá-lo</h1>
+                <p class="text_problem" id="text_right">
+                    Nossa solução pode ajudar no dia a dia das pessoas ao:
+                    <ol>
+                        <li class="list_problem">Proporcionar informações acessíveis e compreensíveis sobre a qualidade da água e os níveis de poluição.</li>
+                        <li class="list_problem">Alertar sobre áreas críticas que necessitam de intervenção urgente.</li>
+                        <li class="list_problem">Apoiar pescadores e comunidades costeiras na proteção de suas fontes de sustento.</li>
+                        <li class="list_problem">Incentivar práticas industriais e agrícolas mais sustentáveis, reduzindo a liberação de poluentes.</li>
+                        <li class="list_problem">Contribuir para a preservação da biodiversidade marinha, essencial para a saúde do planeta e para as futuras gerações.</li>
+                    </ol>
+                </p>
+            </div>
+            <div class="img_problem"></div>
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 Ocean Shield. Todos os direitos reservados.</p>
