--- a/sustentabilidade.html
+++ b/sustentabilidade.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="src/assets/img/icone/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/sustentabilidade.css">
     <title>Ocean Shield</title>
 </head>
 
@@ -23,7 +24,7 @@
             <ul class="nav-list">
                 <li class="navlink"><a href="index.html">Home</a></li>
                 <li class="navlink"><a href="servicos.html">Serviços</a></li>
-                <li class="navlink"><a href="sobre.html">Sobre Nós</a></li>
+                <li class="navlink"><a href="sobre.html">Sobre</a></li>
                 <li class="navlink"><a href="contato.html">Contato</a></li>
                 <li class="navlink"><a href="sustentabilidade.html">Sustentabilidade</a></li>
                 <li class="navlink"><a href="#outro">Outro</a></li>
@@ -31,9 +32,13 @@
         </nav>
     </header>
     
-    <main>
-
-    </main>
+    <div id="banner">
+        <img id="imgBanner" src="sua-imagem.jpg" alt="Banner">
+        <div class="text-overlay">
+            <h1>Sustentabilidade</h1>
+            <p>Aqui você encontra informações sobre as principais causas da poluição marinha.</p>
+        </div>
+    </div>
     <footer>
         <p>&copy; 2024 Ocean Shield. Todos os direitos reservados.</p>
     </footer>
@@ -46,6 +51,7 @@
         });
     </script>
     <script src="src/js/script.js"></script>
+    <script src="src/js/sustentabilidade.js"></script>
 </body>
 
 </html>
