--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             </div>
             <ul class="nav-list">
                 <li class="navlink"><a href="index.html">Home</a></li>
-                <li class="navlink"><a href="servicos.html">Serviços</a></li>
+                <li class="navlink"><a href="animais.html">Animais</a></li>
+                <li class="navlink"><a href="sustentabilidade.html">Sustentabilidade</a></li>
                 <li class="navlink"><a href="sobre.html">Sobre Nós</a></li>
                 <li class="navlink"><a href="contato.html">Contato</a></li>
-                <li class="navlink"><a href="sustentabilidade.html">Sustentabilidade</a></li>
-                <li class="navlink"><a href="#outro">Outro</a></li>
+                <li class="navlink"><a href="login.html">Login</a></li>
             </ul>
         </nav>
     </header>
