--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li class="navlink"><a href="index.html">Home</a></li>
                 <li class="navlink"><a href="animais.html">Animais</a></li>
                 <li class="navlink"><a href="sustentabilidade.html">Sustentabilidade</a></li>
-                <li class="navlink"><a href="sobre.html">Sobre Nós</a></li>
+                <li class="navlink"><a href="sobre.html">Notícias</a></li>
                 <li class="navlink"><a href="contato.html">Contato</a></li>
                 <li class="navlink"><a href="login.html">Login</a></li>
             </ul>
@@ -51,7 +51,8 @@
             <div class="content_problem" id="section2">
                 <h1 class="h1_problem">Qual a tecnologia ajuda a diminuir esse problema?</h1>
                 <p class="text_problem">
-                    Nós da Ocean Shield desenvolvemos soluções para informar sobre a poluição marinha e ajudar a reduzir seus efeitos. Vamos usar sensores para medir o dióxido de carbono e a temperatura da água. Além disso, criaremos uma ferramenta para verificar se a água atende aos padrões globais. Em nosso site, você encontrará informações sobre a poluição oceânica, apresentadas com gráficos e tabelas.</p>
+                    Na Ocean Shield desenvolvemos soluções para informar sobre a poluição marinha e ajudar a reduzir seus efeitos. Neste site, você poderá encontar diversas informações em formas de gráficos, mapas e textos que lhe ajudem a compreender as consequências dos problemas ambientais.
+                    Além de ter a possibilidade de se conectar com outros pescadores, empresas e organizações em busca de desenvolver e financiar soluções para esses problemas.</p>
             </div>
             <div class="img_problem"></div>
         </section>
@@ -103,9 +104,43 @@
             </div>
             <div class="img_problem"></div>
         </section>
+
     </main>
     <footer>
-        <p>&copy; 2024 Ocean Shield. Todos os direitos reservados.</p>
+        <div class="waves">
+            <div class="wave" id="wave1"></div>
+        </div>
+
+        <div class="zoom">
+            <ul class="social_icon">
+                <li><a href="#"><ion-icon
+                            name="logo-facebook"></ion-icon>
+                    </a></li>
+
+                <li><a href="#"><ion-icon
+                            name="logo-twitter"></ion-icon>
+                    </a></li>
+
+                <li><a href="#"><ion-icon
+                            name="logo-linkedin"></ion-icon>
+                    </a></li>
+
+                <li><a href="#"><ion-icon
+                            name="logo-instagram"></ion-icon>
+                    </a></li>
+            </ul>
+
+        </div>
+
+        <ul class="menu">
+            <li><a href="#">Termos</a></li>
+            <li><a href="#">Políticas</a></li>
+            <li><a href="#">Temas</a></li>
+            <li><a href="#">Cookies</a></li>
+            <li><a href="#">Parceiros</a></li>
+        </ul>
+
+        <p class="rodape">© 2024 - Todos os direitos reservados</p>
     </footer>
 
     <script>
